Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5323

memory leak in lfs_hsm_request()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.6.0
    • None
    • 3
    • 14861

      Frank Zago added a comment in LU-4984 - 01/Jul/14 9:26 AM

      The committed patch (http://review.whamcloud.com/10615) still has the memory leak mentioned here: http://review.whamcloud.com/#/c/10615/5/lustre/utils/lfs.c,cm

            utopiabound Nathaniel Clark
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: