LU-5323 utils: fix memory leak in lfs_hsm_request()

Fix memory leak in error case in lfs_hsm_request().  hur is allocated,
and should be freed befor being overwritten.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: I9c01400fafb53e3914b9ed5eb9c8c9e575423551